# snconnect

./: .gitignore  3.py  README.md  nxr_connect.py  pyproject.toml  slack_notion_callendar_connect.py  slack_notion_connect.py
slack_notion/: manage.py
slack_notion/slack_integration/: views.py
slack_notion/slack_notion/: asgi.py  settings.py  urls.py  wsgi.py
slaction/: pyvenv.cfg
